# SeriesXRD

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  environment.yml  pyproject.toml
.claude/skills/ask-matt/: SKILL.md
.claude/skills/codebase-design/: SKILL.md
.claude/skills/diagnosing-bugs/: SKILL.md
.claude/skills/domain-modeling/: SKILL.md
.claude/skills/grill-with-docs/: SKILL.md
.claude/skills/improve-codebase-architecture/: SKILL.md
.claude/skills/prototype/: SKILL.md
.claude/skills/resolving-merge-conflicts/: SKILL.md
.claude/skills/setup-matt-pocock-skills/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/to-prd/: SKILL.md
.claude/skills/triage/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bulkxrd/: __init__.py  app.py
bulkxrd/analysis/: __init__.py  background.py  batch.py  benchmark.py  corpus.py  fractions.py  frame_metadata.py  gui.py  heatmap.py  identify.py  microstructure.py  ml_features.py  ml_rank.py  ml_scorer.py  ml_simulate.py  ml_train.py  mldata.py  peaks.py  phases.py  refine_export.py  residual.py  review.py  run_gui.py  session.py  spots.py  stackplot.py  unknowns.py  worker.py
bulkxrd/analysis/refdata/: __init__.py  baseline_phases.json
bulkxrd/calib/: __init__.py  gui.py  processing.py  run_gui.py  worker.py
bulkxrd/core/: __init__.py  config.py  env.py  handoff.py  inspect.py  io.py  naming.py  processes.py
bulkxrd/guikit/: __init__.py  dpi.py  theme.py  tkstyle.py  tooltip.py
bulkxrd/reduce/: __init__.py  gui.py  processing.py  review.py  run_gui.py  session.py  straighten.py  texture.py  watch.py  worker.py
docs/: architecture.md  file-format.md  ml-training-ris.md  ml-training.md  phase-sources.md  releasing.md  roadmap.md  test-data.md  validation.md  workflow.md
docs/agents/: domain.md  issue-tracker.md  next-session.md  triage-labels.md
examples/: calibration_session_config.example.json  fetch_benchmark_example.sh
examples/ti64_demo/: ATTRIBUTION.md  README.md  fetch_demo_data.py  source_manifest.json
examples/ti64_demo/geometry/: Ti64_908mm_refined.poni
seriesxrd/: __init__.py  app.py
seriesxrd/analysis/: __init__.py  background.py  batch.py  benchmark.py  categorization.py  corpus.py  fractions.py  frame_metadata.py  gui.py  heatmap.py  identify.py  microstructure.py  ml_rank.py  ml_scorer.py  ml_train.py  parallel.py  peaks.py  phases.py  refine_export.py  refine_import.py  residual.py  review.py  run_gui.py  spots.py  stackplot.py  unknowns.py  worker.py
seriesxrd/analysis/refdata/: baseline_phases.json
seriesxrd/calib/: __init__.py  dioptas.py  gui.py  processing.py  run_gui.py  worker.py
seriesxrd/core/: __init__.py  config.py  env.py  handoff.py  inspect.py  io.py  masks.py  provenance.py  uiprefs.py
seriesxrd/guikit/: __init__.py  labels.py  mpl_embed.py  theme.py  tkstyle.py  tooltip.py
seriesxrd/reduce/: __init__.py  gui.py  processing.py  review.py  run_gui.py  session.py  straighten.py  texture.py  watch.py  worker.py
tests/: _display.py  smoke_test.py  test_analysis_review.py  test_app.py  test_background.py  test_batch_parallel.py  test_benchmark.py  test_corpus.py  test_fit_source.py  test_fractions.py  test_frame_metadata.py  test_gui_navigation.py  test_gui_plot_layout.py  test_gui_startup.py  test_h5_ingest.py  test_heatmap_grid.py  test_heatmap_mldata.py  test_identify.py  test_imports.py  test_ml.py  test_peaks.py  test_phases.py  test_processes.py  test_provenance.py  test_reduce_robust.py  test_refine_export.py  test_refine_import.py  test_residual.py  test_smoke.py  test_spots.py  test_stackplot.py  test_straighten.py  test_texture.py  test_theme.py  test_unknowns_wh.py  test_watch.py  test_worker_script_bootstrap.py
