[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bulkxrd"
# Keep in sync with VERSION in bulkxrd/core/config.py.
version = "0.2.0"
description = "GUI + CLI workflow for powder XRD series: calibration (pyFAI-based), dataset reduction, and automated phase analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "rmaples3" },
]
keywords = ["XRD", "powder diffraction", "calibration", "pyFAI", "high pressure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core runtime dependencies (mirrors REQUIRED_IMPORTS in bulkxrd/core/env.py).
# tkinter is also required but ships with the Python interpreter itself.
dependencies = [
    "numpy",
    "scipy",
    "Pillow",
    "matplotlib",
    "pyFAI",
    "fabio",
    "h5py",
]

[project.optional-dependencies]
# Extra image-format readers beyond the core fabio/Pillow/h5py stack.
io = ["tifffile"]
# HDF5 itself is core via h5py. Eiger-style master files are often
# bitshuffle/LZ4-compressed and need hdf5plugin's filter registrations.
stacks = ["hdf5plugin"]
# Crystallography backend for the reference-phase library: CIF parsing and
# powder-pattern simulation (peak positions + intensities). Optional — the
# phase registry, EOS math, and bundled baseline work without it.
phases = ["pymatgen"]
# Step 3b learned models (PyTorch). The deterministic candidate ranker
# (analysis/ml_rank.py) and the simulator/feature builders are pure-numpy and do
# NOT need this; only a trained ranker/classifier does. Keeps core light.
ml = ["torch"]

[project.scripts]
bulkxrd = "bulkxrd.app:main"
bulkxrd-calib-gui = "bulkxrd.calib.run_gui:main"
bulkxrd-reduce-gui = "bulkxrd.reduce.run_gui:main"
bulkxrd-analysis-gui = "bulkxrd.analysis.run_gui:main"
bulkxrd-analyze = "bulkxrd.analysis.batch:main"
bulkxrd-ml-train = "bulkxrd.analysis.ml_train:main"
bulkxrd-benchmark = "bulkxrd.analysis.benchmark:main"
bulkxrd-corpus = "bulkxrd.analysis.corpus:main"
bulkxrd-texture = "bulkxrd.reduce.texture:main"
bulkxrd-watch = "bulkxrd.reduce.watch:main"
bulkxrd-export-refinement = "bulkxrd.analysis.refine_export:main"
bulkxrd-inspect = "bulkxrd.core.inspect:main"

[tool.setuptools.packages.find]
include = ["bulkxrd*"]

[tool.setuptools.package-data]
# Ship the bundled reference-phase baseline with the package.
"bulkxrd.analysis.refdata" = ["*.json"]
