[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "seriesxrd"
dynamic = ["version"]
description = "Desktop and command-line workflow for calibrating, reducing, and analyzing powder X-ray diffraction series"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rush Maples", email = "rmaples3@gatech.edu" },
]
keywords = ["XRD", "powder diffraction", "calibration", "pyFAI", "high pressure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core runtime dependencies (mirrors REQUIRED_IMPORTS in seriesxrd/core/env.py).
# tkinter is also required but ships with the Python interpreter itself.
# Minimum versions are validated by the lowest-supported-dependencies CI job
# (.github/workflows/ci.yml, "floor-versions") — raise a floor only together
# with that job's pins.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "pyFAI>=2024.1",
    "fabio>=2023.10",
    "h5py>=3.8",
]

[project.urls]
Homepage = "https://github.com/RushMaples/SeriesXRD"
Repository = "https://github.com/RushMaples/SeriesXRD"
Issues = "https://github.com/RushMaples/SeriesXRD/issues"
Documentation = "https://github.com/RushMaples/SeriesXRD/tree/main/docs"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "twine>=5"]
# Extra image-format readers beyond the core fabio/Pillow/h5py stack.
io = ["tifffile"]
# HDF5 itself is core via h5py. Eiger-style master files are often
# bitshuffle/LZ4-compressed and need hdf5plugin's filter registrations.
stacks = ["hdf5plugin"]
# Crystallography backend for the reference-phase library: CIF parsing and
# powder-pattern simulation (peak positions + intensities). Optional — the
# phase registry, EOS math, and bundled baseline work without it.
phases = ["pymatgen"]
# Step 3b learned models (PyTorch). The deterministic candidate ranker
# (analysis/ml_rank.py) and the simulator/feature builders are pure-numpy and do
# NOT need this; only a trained ranker/classifier does. Keeps core light.
ml = ["torch"]

[project.scripts]
seriesxrd = "seriesxrd.app:main"
seriesxrd-calib-gui = "seriesxrd.calib.run_gui:main"
seriesxrd-reduce-gui = "seriesxrd.reduce.run_gui:main"
seriesxrd-analysis-gui = "seriesxrd.analysis.run_gui:main"
seriesxrd-analyze = "seriesxrd.analysis.batch:main"
seriesxrd-ml-train = "seriesxrd.analysis.ml_train:main"
seriesxrd-benchmark = "seriesxrd.analysis.benchmark:main"
seriesxrd-corpus = "seriesxrd.analysis.corpus:main"
seriesxrd-texture = "seriesxrd.reduce.texture:main"
seriesxrd-spots = "seriesxrd.analysis.spots:main"
seriesxrd-watch = "seriesxrd.reduce.watch:main"
seriesxrd-export-refinement = "seriesxrd.analysis.refine_export:main"
seriesxrd-export-gsas = "seriesxrd.analysis.refine_export:main_gsas_raw"
seriesxrd-stack = "seriesxrd.analysis.stackplot:main"
seriesxrd-inspect = "seriesxrd.core.inspect:main"

[project.gui-scripts]
seriesxrd-gui = "seriesxrd.app:main"

[tool.setuptools.packages.find]
include = ["seriesxrd*"]

[tool.setuptools.dynamic]
version = {attr = "seriesxrd.core.config.VERSION"}

[tool.setuptools.package-data]
# Ship the bundled reference-phase baseline with the package.
"seriesxrd.analysis.refdata" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
